# MachineLearningStudy

./: README.md  test1.py  test2.py
logistic-regression-test/: logistic_regression.py
poetry-sample-project/: pyproject.toml  test.ipynb
poetry-sample-project/samples/: test.py
pycaret-test/: pandas_profiling_test.py  pyproject.toml
streamlit-test/: first_app.py  linear.py  pyproject.toml
