[tool.poetry]
name = "machinelearningstudy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.1.0"
scikit-learn = "^0.22.2"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
pandas = "^1.0.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
