[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["mur6"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^0.74.1"
scikit-learn = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
